# structured-representations-maze-transformers

./: pyproject.toml  readme.md
notebooks/attention/: attn_gif.ipynb
notebooks/behavioral/: generate_rollouts.ipynb
notebooks/embedding/: residual_stream_decoding.ipynb
