[tool.poetry]
name = "structured-representations-maze-transformers"
version = "0.1.0"
description = "code repository for https://arxiv.org/abs/2312.02566"
authors = []
readme = "README.md"
packages = [{include = "notebooks"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.1"
# transformer-lens must be exactly 1.6.1 for unireps (tokenizer weirdness)
transformer-lens = "1.6.1"
maze-transformer = { git = "https://github.com/AISC-understanding-search/maze-transformer.git" } # should be >=0.1.0, not on pypi yet
scikit-learn = "^1.2.2"
muutils = "^0.5.3"
zanj = "^0.2.0"
matplotlib = "^3.7.0"
plotly = "^5.13.1"
circuitsvis = "^1.39.1"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
